--- a/database.ini
+++ b/database.ini
@@ -1,5 +1,17 @@
-[intranet]
+[LOCAL]
 host=localhost
 port=5432
-database=moek_ripper
+database=moek
+user=pgi_user
+
+[FS1KIE]
+host=10.2.0.245
+port=5432
+database=moek
+user=pgi_user
+
+[MOEK]
+host=192.168.1.146
+port=5432
+database=moek
 user=pgi_user
